# agent-tools

./: .gitignore  AGENTS.md  Makefile  OPENCODE_GITHUB_LIBRARIAN_PLAN.md  README.md  THIRD_PARTY_LICENSES.md  pyproject.toml  utils.py
.agents/: resume  setup
droid-wiki/: .wiki-meta.json  by-the-numbers.md  deployment.md  fun-facts.md  lore.md  maintainers.md
droid-wiki/agent-targets/: amp.md  antigravity.md  claude.md  cline.md  codex.md  copilot-cli.md  cursor.md  gemini.md  index.md  kilocode.md  opencode.md  pi.md  roocode.md  vscode-copilot.md  warp.md  windsurf.md
droid-wiki/cleanup-opportunities/: index.md
droid-wiki/features/: create-pr.md  deslop.md  handoff.md  index.md  mission-scrutiny.md  pr-reviewer-only.md  pr-reviewer.md  predict-issues.md  refactor.md  review.md  ultrareview.md  widereview.md
prompts/: aliases.json
prompts/opencode/evals/fixtures/tiny-python-app/: pyproject.toml
prompts/opencode/evals/fixtures/tiny-python-app/src/tiny_python_app/: __init__.py  strings.py
prompts/opencode/evals/fixtures/tiny-python-app/tests/: test_strings.py
scripts/: all-token-usage.py  amp-token-usage.py  claude-agentrouter.sh  claude-bai.sh  claude-provider.sh  claude-xiaomi.sh  codex-ccapi.sh  codex-token-usage.py  devin-token-usage.py  install.ps1  install.sh  pi-zenmux.sh  render-prompts.py  set-model.sh  set-worker-model.sh
tests/: test_all_token_usage.py  test_amp_token_usage.py  test_claude_provider.py  test_codex_token_usage.py  test_devin_token_usage.py  test_render_prompts.py  test_utils.py  zenmux-throttle-proxy.test.js
(+252 files in other folders)
