[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tiny-python-app"
version = "0.1.0"
description = "A minimal Python fixture for testing"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
